<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_art_track_black_24dp"
            android:title="@string/menu_news" />

        <item
            android:id="@+id/nav_tickets"
            android:icon="@drawable/ic_confirmation_number_black_24dp"
            android:title="@string/menu_tickets" />

        <item
            android:id="@+id/nav_goto_stadium"
            android:icon="@drawable/ic_map_black_24dp"
            android:title="@string/menu_goto_stadium" />

        <item
            android:id="@+id/nav_how_to_get"
            android:icon="@drawable/ic_directions_walk_black_24dp"
            android:title="@string/menu_how_to_get" />

        <item
            android:id="@+id/nav_events"
            android:icon="@drawable/ic_event_available_black_24dp"
            android:title="@string/menu_events" />

        <item
            android:id="@+id/nav_narrative"
            android:icon="@drawable/ic_live_tv_black_24dp"
            android:title="@string/menu_narrative" />
    </group>
</menu>
