<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/startup_background"
    tools:context=".RegisterFragment">

    <ImageView
        android:id="@+id/club_logo_register"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/startup_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="@drawable/startup_logo" />

    <EditText
        android:id="@+id/first_name_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:autofillHints="@string/first_name"
        android:hint="@string/first_name"
        android:inputType="textAutoComplete"
        android:selectAllOnFocus="true"
        android:textColorHint="@color/colorWhite"
        android:backgroundTint="@color/colorWhite"
        android:layout_below="@id/club_logo_register"/>

    <EditText
        android:id="@+id/last_name_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:autofillHints="@string/last_name"
        android:hint="@string/last_name"
        android:inputType="textAutoComplete"
        android:selectAllOnFocus="true"
        android:textColorHint="@color/colorWhite"
        android:backgroundTint="@color/colorWhite"
        android:layout_below="@id/first_name_register"/>

    <EditText
        android:id="@+id/email_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:autofillHints="@string/email"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        android:textColorHint="@color/colorWhite"
        android:backgroundTint="@color/colorWhite"
        android:layout_below="@id/last_name_register"/>

    <EditText
        android:id="@+id/password_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:autofillHints="@string/password"
        android:hint="@string/password"
        android:imeActionLabel="Hasło"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:textColorHint="@color/colorWhite"
        android:backgroundTint="@color/colorWhite"
        android:selectAllOnFocus="true"
        android:layout_below="@id/email_register"/>

    <Button
        android:id="@+id/button_register"
        android:layout_width="150dp"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="64dp"
        android:textSize="18sp"
        android:enabled="false"
        android:background="@color/colorWhite"
        android:textColor="@color/colorPrimary"
        android:text="@string/register_button"
        android:layout_below="@id/password_register"/>

    <TextView
        android:id="@+id/to_login_register"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:layout_alignParentBottom="true"
        android:text="@string/return_to_login"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="20sp" />

</RelativeLayout>