<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/startup_background"
    tools:context=".LoginFragment">

    <ImageView
        android:id="@+id/club_logo_login"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/startup_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="@drawable/startup_logo" />

    <EditText
        android:id="@+id/email_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="24dp"
        android:autofillHints="@string/email"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        android:textColorHint="@color/colorWhite"
        android:textColor="@color/colorWhite"
        android:textColorLink="@color/colorWhite"
        android:backgroundTint="@color/colorWhite"
        android:layout_below="@id/club_logo_login"/>

    <EditText
        android:id="@+id/password_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:autofillHints="@string/password"
        android:hint="@string/password"
        android:imeActionLabel="@string/password"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:textColorHint="@color/colorWhite"
        android:textColor="@color/colorWhite"
        android:textColorLink="@color/colorWhite"
        android:backgroundTint="@color/colorWhite"
        android:selectAllOnFocus="true"
        android:layout_below="@id/email_login"/>

    <Button
        android:id="@+id/button_login"
        android:layout_width="150dp"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="15dp"
        android:textSize="18sp"
        android:enabled="true"
        android:background="@color/colorWhite"
        android:textColor="@color/colorPrimary"
        android:text="@string/login_button"
        android:layout_below="@id/password_login"/>

    <TextView
        android:id="@+id/not_registered_login"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:layout_alignParentBottom="true"
        android:text="@string/have_not_account"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="20sp" />

</RelativeLayout>